@@ -394,6 +394,7 @@ void bindTypeId()
 		.value( "LineSegment3dData", LineSegment3dDataTypeId )
 		.value( "LineSegment3fParameter", LineSegment3fParameterTypeId )
 		.value( "LineSegment3dParameter", LineSegment3dParameterTypeId )
+		.value( "DataInterleaveOp", DataInterleaveOpTypeId )
 	;
 }
 
