@@ -1,0 +1,165 @@
+##########################################################################
+#
+#  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+#
+#  Redistribution and use in source and binary forms, with or without
+#  modification, are permitted provided that the following conditions are
+#  met:
+#
+#     * Redistributions of source code must retain the above copyright
+#       notice, this list of conditions and the following disclaimer.
+#
+#     * Redistributions in binary form must reproduce the above copyright
+#       notice, this list of conditions and the following disclaimer in the
+#       documentation and/or other materials provided with the distribution.
+#
+#     * Neither the name of Image Engine Design nor the names of any
+#       other contributors to this software may be used to endorse or
+#       promote products derived from this software without specific prior
+#       written permission.
+#
+#  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
+#  IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+#  THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+#  PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
+#  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+#  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+#  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+#  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+#  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+#  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#
+##########################################################################
+
+import unittest
+
+import IECore
+
+class DataInterleaveOpTest( unittest.TestCase ) :
+
+	def test( self ) :
+
+		i = IECore.ObjectVector(
+			
+			[
+				IECore.IntVectorData( [ 1, 2, 3 ] ),
+				IECore.IntVectorData( [ 11, 12, 13 ] ),
+				IECore.IntVectorData( [ 21, 22, 23 ] ),
+			]
+			
+		)
+		
+		o = IECore.DataInterleaveOp()( 
+		
+			data = i,
+			targetType = IECore.IntVectorData.staticTypeId()
+		
+		)
+		
+		self.assertEqual(
+		
+			o,
+			IECore.IntVectorData( [
+				1, 11, 21,
+				2, 12, 22,
+				3, 13, 23,
+			] )
+			
+		)
+	
+	def testDataScaling( self ) :
+	
+		i = IECore.ObjectVector( 
+		
+			[
+				IECore.FloatVectorData( [ 0 ] ),
+				IECore.FloatVectorData( [ 0.5 ] ),
+				IECore.FloatVectorData( [ 1 ] ),
+			]
+			
+		)
+		
+		o = IECore.DataInterleaveOp()( 
+		
+			data = i,
+			targetType = IECore.UCharVectorData.staticTypeId()
+		
+		)
+		
+		self.assertEqual(
+		
+			o,
+			IECore.UCharVectorData( [ 0, 128, 255 ] )
+			
+		)
+	
+	def testMismatchedInputLengths( self ) :
+	
+		i = IECore.ObjectVector(
+			
+			[
+				IECore.IntVectorData( [ 1, 2, 3 ] ),
+				IECore.IntVectorData( [ 11, 12, 13 ] ),
+				IECore.IntVectorData( [ 21, 23 ] ),
+			]
+			
+		)
+	
+		o = IECore.DataInterleaveOp()
+		self.assertRaises( RuntimeError, o, data=i, targetType = IECore.IntVectorData.staticTypeId() )
+		
+	def testBadTargetTypes( self ) :
+	
+		i = IECore.ObjectVector(
+			
+			[
+				IECore.IntVectorData( [ 1, 2, 3 ] ),
+				IECore.IntVectorData( [ 11, 12, 13 ] ),
+				IECore.IntVectorData( [ 21, 22, 23 ] ),
+			]
+			
+		)
+	
+		o = IECore.DataInterleaveOp()
+	
+		self.assertRaises( RuntimeError, o, data=i, targetType = IECore.MeshPrimitive.staticTypeId() )
+		self.assertRaises( RuntimeError, o, data=i, targetType = IECore.StringVectorData.staticTypeId() )
+	
+	def testInterleaveIntoV3( self ) :
+	
+		i = IECore.ObjectVector(
+			
+			[
+				IECore.IntVectorData( [ 1, 2 ] ),
+				IECore.IntVectorData( [ 11, 12 ] ),
+				IECore.IntVectorData( [ 21, 22 ] ),
+			]
+			
+		)
+	
+		o = IECore.DataInterleaveOp()( data=i, targetType = IECore.V3iVectorData.staticTypeId() )
+		
+		self.assertEqual(
+		
+			o,
+			IECore.V3iVectorData( [ IECore.V3i( 1, 11, 21 ), IECore.V3i( 2, 12, 22 ), ] )
+		
+		)
+	
+	def testWrongDataForV3( self ) :
+	
+		i = IECore.ObjectVector(
+			
+			[
+				IECore.IntVectorData( [ 1, 2, 3 ] ),
+				IECore.IntVectorData( [ 11, 12, 13 ] ),
+			]
+			
+		)
+		
+		o = IECore.DataInterleaveOp()
+		self.assertRaises( RuntimeError, o, data=i, targetType = IECore.V3iVectorData.staticTypeId() )
+	
+if __name__ == "__main__":
+    unittest.main()
